--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,6 @@
-server:
-  port: 8186
-  
-datasource:
-  url: jdbc:h2:mem:testdb
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
 
 eureka:
   client:
